Revert "[ Add ] base mockup"
This reverts commit 23bb2a051c76bdccc52ea089a5c4b57ec50555a3.